Fix some feature